styles.css
/* ... */
.aprt-hlights-container {
  display: inline-block;
  /* width: 90%; */
  width: 350px;
  background-color: #4782A6;
  padding: 20px;
  margin: 20px;
}

.avail-flrpln-img-container {
  height: 400px;
  background-color: white;
  margin-top: 10px;
}

.avail-flrpln-img {
  width: 100%;
  max-height: 380px;
  /* background-color: white; */
  padding: 20px;
}

.aprt-price-h1 {
  font-weight: 700;
}

.sub-details-container {
  text-align: left;
  padding: 10px 0 10px 0;
}

/* #two-bed-avail {
  display: none;
}

#three-bed-avail {
  display: none;
} */

.avail-discl-section {
  color: #4782A6;
}

/* Apartment Details Section */

.apart-header-section {
  /* height: 270px; */
  background-color: #F3F1E6;
  text-align: center;
  color: #4782A6;
  padding: 40px 0 30px 0;
}

.cgi-display-section {
  padding-top: 0;
}

.apartment-iframe-container {
  width: 850px;
  margin: auto;
}

/* .cgi-display-section {

} */

.mob-view-flrplan-section {
  display: none;
}

.mob-view-cgi-nav-btns-container {
  width: 100%;
}

.mob-flrplan-img-container {
  width: 90%;
  max-width: 580px;
  background-color: white;
  border-color: black;
  border-style: solid;
  border-width: 2px;
  margin: auto;
  padding: 20px;
  margin-top: 50px;
  margin-bottom: 40px;
}

.mob-apart-deet-flr-img {
  width: 100%;

}

.avail-btn-mob-height {
  height: 120px;
}

.model-icon-img {
  /* width: 55px;
  margin-top: 8px; */
}

.vr-tour-icon-img {
  /* width: 80px;
  margin-top: 15px;
  margin-bottom: 13px; */
}

.icon-avail-btn {
  /* width: 300px; */
  min-width: 180px;
  background-color:  #cddee8;
  border-color: black;
  border-style: solid;
  border-width: 2px;
  color: #black;
  letter-spacing: 1px;
  margin: 10px auto 0 auto;
  padding: 2% 5% 2% 5%;
}

/* .icon-avail-btn:hover {
  background-color: #cddee8;
  border-color: #F3F1E6;
  color: #F3F1E6;
} */

.apart-details-section {
  color: #4782A6;
  padding-top: 0;
}

.all-apart-deets-container {
  width: 70%;
  max-width: 850px;
  margin: 70px auto 70px auto;
}

.all-apart-deets-container div b {
  color: #4782A6;
}

.apart-deets-list-container {
  text-align: left;
}

.apart-underline-div {
  width: 330px;
  color: black;
  /* border-bottom-style: solid;
  border-color: #1f4468;
  border-width: 2px; */
  margin-bottom: 10px;
}

.underl {
  border-bottom-style: solid;
  border-color: black;
  border-width: 2px;
  padding-bottom: 5px;
}

.apart-spacer-width {
  display: inline-block;
  width: 85px;
}

.apart-spacer-width-m {
  display: inline-block;
  width: 135px;
}

.apart-deets-table-container {
  /* width: 90%; */
  text-align: left;
  /* margin: auto; */
}

.apart-deets-item {
  margin-bottom: 10px;
}

.apart-deets-list-bold {
  font-weight: 700;
  color: #4782A6;
}

.apart-deets-list-plain {
  color: black;
}

.apart-disclaimer-div {
  width: 70%;
  max-width: 850px;
  text-align: left;
  margin: auto;
}

.apart-disclaimer-div p {
  font-size: 0.7rem;
}

@media only screen and (max-width: 1500px) {
  .my-width-control {
    width: 1400px;
    padding-left: 2%;
    padding-right: 2%;
  }

  .dev-landing-page-section {
    width: 100%;
    height: 670px;
    background-size: 1500px auto;
  }

  .area-landing-page-section {
    width: 100%;
    height: 670px;
    background-size: 1500px auto;
  }

  .intro-text-section {
    background-size: 1500px auto;
  }

  .development-image-section {
    background-size: 1500px 100%;
  }

  .welc-text-container {
    padding-top: 25px;
  }

  .location-text-section {
    background-position: center bottom;
    /* background-size: 1155 650; */
    background-size: 1510px 800px;
  }

  /* keep fade size dynamic */

  .transp-spacer {
    padding-top: 45px;
  }

  .transp-intro-text-container {
    /* padding-top: 45px; */
  }

}

@media only screen and (max-width: 1400px) {
  .my-width-control {
    width: 1200px;
    padding-left: 2%;
    padding-right: 2%;
  }

  .welc-text-container {
    padding-top: 0;
  }

  .welc-img-container {
    height: 412px;
    background-size: 640px 412px;
  }

  .area-sec-3-img-container {
    width: 350px;
    height: 350px;
    background-size: 380px 380px;
  }

  .hlight-text-container {
    padding-top: 0;
  }

  .coffee-img-container {
    height: 377px;
    background-size: 585px 377px;
  }

  .transp-spacer {
    padding-top: 15px;
  }

  .transp-intro-text-container {
    /* padding-top: 15px; */
  }

  .can-wat-tube-img-container {
    height: 350px;
    background-size: 544px 350px;
  }
}
/* ... */

